--- a/src/styles.css
+++ b/src/styles.css
@@ -27,12 +27,21 @@ body {
   padding: 25px;
 }
 
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .card {
   margin-bottom: 20px;
 }
 
 .name {
   font-family: StardewValley;
+  font-size: 40px;
+  letter-spacing: 2px;
+  color: #904c33;
 }
 
 .SVFont {
