--- a/src/styles.css
+++ b/src/styles.css
@@ -14,11 +14,12 @@ body {
     rgba(4, 120, 231),
     rgba(97, 227, 229)
   );
-  height: 100%;
+  height: 100vh;
 }
 
 .content {
   position: relative;
+  height: 100%;
 }
 
 .characters {
@@ -67,4 +68,21 @@ body {
   background-color: #eca65e;
   border-radius: 6px;
   padding: 4px;
+}
+
+/* square buttons */
+.rec.rec-arrow {
+  border-radius: 0;
+}
+
+/* round buttons on hover */
+.rec.rec-arrow:hover {
+  border-radius: 50%;
+  color: black;
+}
+/* disable default outline on focused items */
+/* add custom outline on focused items */
+.rec-carousel-item:focus {
+  outline: none;
+  box-shadow: inset 0 0 1px 1px lightgrey;
 }
