--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: StardewValley;
-  src: url(./fonts/Stardew_Valley.ttf);
+  src: url(./assets/fonts/Stardew_Valley.ttf);
 }
 
 body {
@@ -68,6 +68,7 @@ body {
   background-color: #eca65e;
   border-radius: 6px;
   padding: 4px;
+  position: relative;
 }
 
 /* square buttons */
@@ -85,4 +86,9 @@ body {
 .rec-carousel-item:focus {
   outline: none;
   box-shadow: inset 0 0 1px 1px lightgrey;
+}
+
+.dialogue-box {
+  width: 200px;
+  height: 50px;
 }
