--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: StardewValley;
-  src: url(./assets/fonts/Stardew_Valley.ttf);
+  src: url(./fonts/Stardew_Valley.ttf);
 }
 
 body {
