--- a/src/styles.css
+++ b/src/styles.css
@@ -4,22 +4,35 @@
 
 @font-face {
   font-family: StardewValley;
-  src: url(./fonts/Stardew_Valley.ttf);
+  src: url(./assets/fonts/Stardew_Valley.ttf);
 }
 
 body {
-  background-image: linear-gradient(
-    to bottom,
-    rgba(31, 67, 103),
-    rgba(4, 120, 231),
-    rgba(97, 227, 229)
-  );
+  background-image: url(./assets/img/background.png);
   height: 100vh;
+  cursor: url(http://www.rw-designer.com/cursor-extern.php?id=152330), auto;
 }
 
 .content {
   position: relative;
   height: 100%;
+}
+
+.menu_button {
+  width: 200px;
+  cursor: url(http://www.rw-designer.com/cursor-extern.php?id=152389), auto;
+}
+
+.back_button {
+  width: 125px;
+  cursor: url(http://www.rw-designer.com/cursor-extern.php?id=152389), auto;
+}
+
+.menu {
+  height: 30vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .characters {
@@ -48,17 +61,20 @@ body {
 .SVFont {
   font-size: 40px;
   letter-spacing: 2px;
-  color: #904c33;
+  color: #56170d;
   font-family: StardewValley;
 }
 
-.headers {
+.header {
   padding-top: 0.25px;
   padding-bottom: 0.25px;
   width: 100vw;
   text-align: center;
-  background: linear-gradient(to bottom, #eca65e, #fbc470, #eca65e);
   margin-bottom: 30px;
+}
+
+.main_logo {
+  width: 40vw;
 }
 
 #infoBox {
@@ -71,24 +87,41 @@ body {
   position: relative;
 }
 
-/* square buttons */
-.rec.rec-arrow {
-  border-radius: 0;
+.carousel {
+  width: 40vw;
 }
 
-/* round buttons on hover */
-.rec.rec-arrow:hover {
-  border-radius: 50%;
-  color: black;
+.arrow {
+  padding: 15px;
+  background-color: #fbc470;
+  color: #56170d;
+  margin-top: 90px;
 }
-/* disable default outline on focused items */
-/* add custom outline on focused items */
-.rec-carousel-item:focus {
-  outline: none;
-  box-shadow: inset 0 0 1px 1px lightgrey;
+
+.arrow:hover {
+  transition: all 0.5s;
+  background-color: #eca65e;
+  color: #56170d;
+  cursor: url(http://www.rw-designer.com/cursor-extern.php?id=152389), auto;
 }
 
 .dialogue-box {
   width: 200px;
   height: 50px;
+}
+
+@media only screen and (max-width: 1000px) {
+  .main_logo {
+    width: 60vw;
+  }
+}
+
+@media only screen and (max-width: 850px) {
+  .main_logo {
+    width: 80vw;
+  }
+
+  .menu {
+    flex-wrap: wrap;
+  }
 }
