--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@
   transition: all 0.5s;
 }
 
+*:focus {
+  outline: none;
+}
+
 @font-face {
   font-family: StardewValley;
   src: url(./assets/fonts/Stardew_Valley.ttf);
@@ -84,13 +88,13 @@ body {
 }
 
 #infoBox {
-  width: 80%;
-  height: 80%;
-  margin: 7% auto;
-  background-color: rgba(251, 196, 112);
-  border-radius: 6px;
-  padding: 4px;
+  width: 100vw;
+  margin-top: 10%;
+  /* background-color: rgba(251, 196, 112); */
   position: relative;
+  background-image: url(./assets/img/dialogue_box.png);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .carousel {
@@ -127,14 +131,19 @@ body {
   color: #eca65e;
 }
 
-.dialogue-box {
-  width: 200px;
-  height: 50px;
-}
+/* @media only screen and (max-width: 1400px) {
+  #infoBox {
+    height: 60%;
+  }
+} */
 
 @media only screen and (max-width: 1000px) {
   .main_logo {
     width: 60vw;
+  }
+
+  #infoBox {
+    height: 40%;
   }
 }
 
