--- a/src/styles.css
+++ b/src/styles.css
@@ -59,6 +59,10 @@ body {
   position: relative;
 }
 
+.card:active {
+  cursor: url(http://www.rw-designer.com/cursor-extern.php?id=152389), auto;
+}
+
 .avatar {
   position: absolute;
   bottom: 25%;
@@ -100,14 +104,73 @@ body {
   width: 40vw;
 }
 
-#infoBox {
+.infoBox {
   width: 100vw;
-  margin-top: 10%;
-  /* background-color: rgba(251, 196, 112); */
+  height: 34vw;
   position: relative;
+  top: 50%;
+  transform: translateY(-50%);
   background-image: url(./assets/img/dialogue_box.png);
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.infoBox img {
+  margin-left: 8.75vw;
+  margin-top: 4vw;
+  width: 21vw;
+}
+
+.infoBox h1 {
+  width: 31vw;
+  text-align: center;
+  margin-left: 4vw;
+  margin-top: 1.75vw;
+  color: #56170d;
+  font-family: StardewValley;
+  font-size: 3.8vw;
+  letter-spacing: 2px;
+}
+
+.column1 {
+  width: 30vw;
+  position: absolute;
+  height: 100%;
+  padding-top: 1.25vw;
+  padding-left: 3vw;
+}
+
+.column2 {
+  position: absolute;
+  left: 30vw;
+  width: 30vw;
+  position: absolute;
+  height: 100%;
+  padding-top: 1.25vw;
+}
+
+.infoBox_right {
+  width: 40%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.infoBox_left {
+  width: 60vw;
+  height: 100%;
+}
+
+.modal_info {
+  width: 25vw;
+  font-family: StardewValley;
+  font-size: 3vw;
+  color: #56170d;
+}
+
+.modal_info_2 {
+  color: #904c33;
 }
 
 .carousel {
@@ -170,27 +233,13 @@ input:checked {
   background-color: #eca65e;
 }
 
-/* @media only screen and (max-width: 1400px) {
-  #infoBox {
-    height: 60%;
-  }
-} */
-
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1375px) {
   .main_logo {
     width: 60vw;
-  }
-
-  #infoBox {
-    height: 40%;
   }
 }
 
 @media only screen and (max-width: 850px) {
-  .main_logo {
-    width: 80vw;
-  }
-
   .menu {
     margin-top: 175px;
     flex-direction: column;
@@ -201,7 +250,7 @@ input:checked {
   }
 }
 
-@media only screen and (max-width: 370px) {
+@media only screen and (max-width: 425px) {
   .carousel:last-of-type {
     margin-bottom: 30px;
   }
